Bug 514369 - Wallpaper Type: Slideshow is not working with day/night wallpapers
Summary: Wallpaper Type: Slideshow is not working with day/night wallpapers
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Image & Slideshow wallpaper plugins (other bugs)
Version First Reported In: 6.5.4
Platform: Bazzite Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-01-09 14:48 UTC by stellaberrant
Modified: 2026-01-17 01:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stellaberrant 2026-01-09 14:48:06 UTC
SUMMARY
When you have dynamic wallpapers (day/night wallpapers) and use slideshow as your wallpaper type, they will never change. (for me they are always stuck in the night picture)
I tried the dropdown to switch dynamic wallpapers based on plasma style, day/niight cycle, or always light/ dark, but they don't appear to have any function and you cannot apply after changing this setting like you can in the image wallpaper type.

STEPS TO REPRODUCE
1.  Go to System settings
2.  Go to Wallpaper
3.  Set Wallpaper to 'Slideshow'
4. untick boxes so that only day/night wallpapers show

OBSERVED RESULT
- the wallpaper is just not changing at all

EXPECTED RESULT
- wallpaper would change from day/night based on either the current date/time, plasma colour, or manually setting to day/night

SOFTWARE/OS VERSIONS
System Settings: 6.5.4
KDE Frameworks: 6.21.0
Qt: Using 6.10.1 and built against 6.10.1
Bazzite (Wayland)
Build ABI: x86_64-little_endian-lp64
Kernel: linux 6.17.7-ba22.fc43.x86_64


ADDITIONAL INFORMATION
Comment 2 Bug Janitor Service 2026-01-09 16:23:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6160
Comment 3 Fushan Wen 2026-01-15 00:56:38 UTC
Git commit fc5ae2e95c398b1c731369475ff264cb80f7e40b by Fushan Wen.
Committed on 15/01/2026 at 00:56.
Pushed by fusionfuture into branch 'master'.

wallpapers/slideshow: fix dynamic mode not working in slideshow mode

The slideshow backend needs to know the current dynamic mode to provide
the corresponding wallpaper to the frontend.
FIXED-IN: 6.6

M  +2    -15   wallpapers/image/imagepackage/contents/ui/config.qml
M  +1    -0    wallpapers/image/imagepackage/contents/ui/main.qml
M  +0    -1    wallpapers/image/plugin/CMakeLists.txt
M  +56   -2    wallpapers/image/plugin/imagebackend.cpp
M  +10   -0    wallpapers/image/plugin/imagebackend.h
D  +0    -28   wallpapers/image/plugin/utils/wallpaperurl.cpp
D  +0    -27   wallpapers/image/plugin/utils/wallpaperurl.h
M  +19   -0    wallpapers/image/slideshowpackage/contents/config/main.xml

https://invent.kde.org/plasma/plasma-workspace/-/commit/fc5ae2e95c398b1c731369475ff264cb80f7e40b
Comment 4 Fushan Wen 2026-01-17 01:18:14 UTC
Git commit 351ea8d228f2494794a02c8421b34725ecce0c06 by Fushan Wen.
Committed on 17/01/2026 at 00:56.
Pushed by fusionfuture into branch 'Plasma/6.6'.

wallpapers/slideshow: fix dynamic mode not working in slideshow mode

The slideshow backend needs to know the current dynamic mode to provide
the corresponding wallpaper to the frontend.
FIXED-IN: 6.6


(cherry picked from commit fc5ae2e95c398b1c731369475ff264cb80f7e40b)

Co-authored-by: Fushan Wen <qydwhotmail@gmail.com>

M  +2    -15   wallpapers/image/imagepackage/contents/ui/config.qml
M  +1    -0    wallpapers/image/imagepackage/contents/ui/main.qml
M  +0    -1    wallpapers/image/plugin/CMakeLists.txt
M  +56   -2    wallpapers/image/plugin/imagebackend.cpp
M  +10   -0    wallpapers/image/plugin/imagebackend.h
D  +0    -28   wallpapers/image/plugin/utils/wallpaperurl.cpp
D  +0    -27   wallpapers/image/plugin/utils/wallpaperurl.h
M  +19   -0    wallpapers/image/slideshowpackage/contents/config/main.xml

https://invent.kde.org/plasma/plasma-workspace/-/commit/351ea8d228f2494794a02c8421b34725ecce0c06