wallpapers/slideshow: fix dynamic mode not working in slideshow mode

The slideshow backend needs to know the current dynamic mode to provide
the corresponding wallpaper to the frontend.

BUG: 514369
FIXED-IN: 6.6